fix tile visibility

--- a/css/components/_tiles.css
+++ b/css/components/_tiles.css
@@ -5,9 +5,10 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
     pointer-events: none;
     z-index: 0;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .tile {
